@@ -1,3 +1,7 @@
+bloonix-server (0.26) released at 2015-XX-XX
+
+    * Removed location caching.
+
 bloonix-server (0.25) released at 2015-04-15
 
     * Kicked default_locations.
